<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/TextContent.Black"
            android:layout_marginTop="@dimen/padding_16"
            android:layout_marginBottom="@dimen/padding_8"
            android:text="@string/title"
            android:textSize="@dimen/padding_text_32"/>
        <TextView
            style="@style/TextContent.Ket"
            android:layout_marginBottom="@dimen/padding_8"
            android:text="@string/ket"/>
        <TextView
            android:id="@+id/tv_detail_info"
            style="@style/TextContent"
            android:layout_marginBottom="@dimen/padding_16"
            android:lineSpacingMultiplier="1"
            android:text="@string/info"
            android:textColor="@android:color/black"/>


    </LinearLayout>

</ScrollView>